# lwpm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TODO.md  pyproject.toml  specification.md
.github/workflows/: lint.yml
src/lwpm/: __init__.py  app.py  crypto.py  generator.py  lwpm.tcss  storage.py
src/lwpm/data/: wordlist.txt
src/lwpm/screens/: auth.py  change_password_modal.py  confirm.py  entry_modal.py  vault.py
tests/: test_app.py  test_crypto.py  test_generator.py  test_storage.py
